<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".level1Fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVert30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_design"
        app:layout_constraintBottom_toBottomOf="@+id/guideVert30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_focus"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideVert30"/>

    <TextView
        android:id="@+id/btnfull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="60sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backgroudn_editext"
        android:padding="13dp"
        android:text="@string/fullbody"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideVert30" />

    <TextView
        android:id="@+id/btnarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnfull"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/arm"
        android:layout_marginVertical="20sp"
        android:background="@drawable/backgroudn_editext"
        android:layout_marginHorizontal="20sp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="13dp"/>

    <TextView
        android:id="@+id/btnleg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="@string/leg"
        android:textColor="@color/black"
        android:background="@drawable/backgroudn_editext"
        android:textAlignment="center"
        android:layout_marginVertical="20sp"
        android:layout_marginHorizontal="20sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnarm"/>

    <TextView
        android:id="@+id/btnchest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="@string/chest"
        android:textColor="@color/black"
        android:background="@drawable/backgroudn_editext"
        android:textAlignment="center"
        android:layout_marginVertical="20sp"
        android:layout_marginHorizontal="20sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnleg"/>





</androidx.constraintlayout.widget.ConstraintLayout>